Bug 90880 - builds can fail due to non-portable glibc-specific internal macro usage
Summary: builds can fail due to non-portable glibc-specific internal macro usage
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-05 23:27 UTC by shawn.walker@oracle.com
Modified: 2016-09-10 14:27 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
defines __WORDSIZE on platforms that do not define it (544 bytes, text/plain)
2015-06-05 23:27 UTC, shawn.walker@oracle.com
Details

Description shawn.walker@oracle.com 2015-06-05 23:27:15 UTC
Created attachment 116329 [details]
defines __WORDSIZE on platforms that do not define it

src/tests/mult-s16-test.c uses the glibc-specific internal macro __WORDSIZE for data size testing and should not as it is a non-portable define specific to glibc.

src/pulsecore/sample-util.h also uses this non-portable define.

A portable option would be preferred to the use of __WORDSIZE, but barring that, the attached patch at least defines it on platforms where it is not.
Comment 1 David Henningsson 2015-06-11 11:38:44 UTC
Thanks for the patch!

I was wondering if it would be better to replace __WORDSIZE with __LP64__ altogether. Do you (or Peter Meerwald) have any opinion on this?
Comment 2 shawn.walker@oracle.com 2015-06-11 19:38:09 UTC
I have no particular opinion on this; as long as it doesn't rely on the glibc-specific macro to determine this, it doesn't matter to me.
Comment 3 Tanu Kaskinen 2016-09-10 14:27:30 UTC
This appears to have been fixed by https://cgit.freedesktop.org/pulseaudio/pulseaudio/commit/?id=7c1a5d61597b8a7b762f8295c7d791942dba3fb5


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.