fix __WORDSIZE warning

src/tests/mult-s16-test.c and src/pulsecore/sample-util.h uses
the glibc-specific internal macro __WORDSIZE

On musl this macro is defined in sys/reg.h

Related to:
https://bugs.freedesktop.org/show_bug.cgi?id=90880

Signed-off-by: Romain Naour <romain.naour@openwide.fr>